--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,3 @@
-$color-red: red;
-$color-aqua: aqua;
-
-body {
-  // background-color: $color-aqua;
-}
-
-h1 {
-  color: $color-red;
-}
+@import "helpers/helpers";
+@import "components/components";
+@import "global/global";
