--- a/sass/global/_global.scss
+++ b/sass/global/_global.scss
@@ -1,3 +1,16 @@
-h1 {
-  color: $color-red;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "CerebriSans", sans-serif;
+  line-height: 1.74;
 }
