--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -1,34 +1,30 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  font-size: 62.5%; }
-
-body {
-  font-family: "CerebriSans", sans-serif;
-  line-height: 1.74; }
+///////////////////////////////
+//****** hero section *******//
+///////////////////////////////
 
 .hero {
   background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
-  height: 60vh; }
-  .hero__title-section {
+  height: 60vh;
+  // border-radius: 0 0 50% 50%;
+
+  &__title-section {
     width: 100%;
     text-align: center;
-    margin-top: 20rem; }
-    .hero__title-section h4 {
+    margin-top: 20rem;
+    h4 {
       font-size: 2rem;
-      color: #ababab;
+      color: $color-grey;
       text-transform: uppercase;
       letter-spacing: 0.2rem;
-      margin-bottom: 2rem; }
-    .hero__title-section h2 {
+      margin-bottom: 2rem;
+    }
+
+    h2 {
       font-size: 4.8rem;
-      margin-bottom: 3rem; }
-    .hero__title-section .btn {
+      margin-bottom: 3rem;
+    }
+
+    .btn {
       font-size: 1.8rem;
       font-weight: 600;
       border-radius: 0.5rem;
@@ -39,65 +35,97 @@ body {
       color: #fff;
       text-align: center;
       height: 5.4rem;
-      line-height: 5.4rem; }
+      line-height: 5.4rem;
+    }
+  }
+}
+
+///////////////////////////////
+//****** feature section *******//
+///////////////////////////////
 
 .feature {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 500px; }
-  .feature__container {
+  height: 500px;
+
+  &__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 200px;
-    margin: 0 5rem; }
-    .feature__container img {
-      margin-bottom: 2rem; }
-    .feature__container h6 {
+    margin: 0 5rem;
+
+    img {
+      margin-bottom: 2rem;
+    }
+
+    h6 {
       font-size: 1.8rem;
       font-weight: 600;
       line-height: 1.25;
       margin-bottom: 1.2rem;
-      text-align: center; }
-    .feature__container p {
-      font-size: 1.5rem;
-      color: #696969;
-      text-align: center; }
+      text-align: center;
+    }
 
+    p {
+      font-size: 1.5rem;
+      color: $color-grey-2;
+      text-align: center;
+    }
+  }
+}
+
+///////////////////////////////
+//****** Product section *******//
+///////////////////////////////
 .product {
   display: flex;
   justify-content: center;
   align-items: baseline;
   height: 500px;
   padding: 6rem 0;
-  background-color: #f8f8f8; }
-  .product__heading--container {
+  background-color: #f8f8f8;
+
+  &__heading--container {
     margin: 0 auto;
     width: 60%;
     text-align: center;
-    margin-bottom: 5rem; }
-    .product__heading--container h6 {
+    margin-bottom: 5rem;
+
+    h6 {
       font-size: 2rem;
       letter-spacing: 0.3rem;
       line-height: 1.45;
       text-transform: uppercase;
       margin-bottom: 2rem;
-      color: #ababab; }
-    .product__heading--container h3 {
-      font-size: 2.8rem; }
-  .product__container--nested {
+      color: $color-grey;
+    }
+
+    h3 {
+      font-size: 2.8rem;
+    }
+  }
+
+  &__container--nested {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 6rem;
-    margin: 0 8rem 0 8rem; }
-    .product__container--nested img {
+    margin: 0 8rem 0 8rem;
+
+    img {
       border-radius: 0.5rem;
       width: 100%;
       grid-row: 1/2;
-      margin-right: 2rem; }
-    .product__container--nested p {
+      margin-right: 2rem;
+    }
+
+    p {
       font-size: 1.5rem;
       color: #7e7e7e;
-      text-align: center; }
+      text-align: center;
+    }
+  }
+}
