--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,33 @@ body {
   font-family: "CerebriSans", sans-serif;
   line-height: 1.74; }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 65px;
+  padding: 0 4rem;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1); }
+  .header__logo {
+    width: 220px; }
+
+.main-nav__list {
+  list-style: none;
+  display: flex;
+  gap: 3.2rem;
+  height: auto;
+  padding: 0 3rem; }
+
+.main-nav__link:link, .main-nav__link:visited {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1.8rem;
+  color: #000;
+  padding: 1.9rem 0.7rem; }
+
 .hero {
   background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
-  height: 60vh; }
+  height: 100vh; }
   .hero__title-section {
     width: 100%;
     text-align: center;
@@ -51,7 +75,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 200px;
+    width: 12.5%;
     margin: 0 5rem; }
     .feature__container img {
       margin-bottom: 2rem; }
