--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -1,10 +1,46 @@
 ///////////////////////////////
+//****** navigation *******//
+///////////////////////////////
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 65px;
+  padding: 0 4rem;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+
+  &__logo {
+    width: 220px;
+  }
+}
+
+.main-nav {
+  &__list {
+    list-style: none;
+    display: flex;
+    gap: 3.2rem;
+    height: auto;
+    padding: 0 3rem;
+  }
+
+  &__link:link,
+  &__link:visited {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 1.8rem;
+    color: #000;
+    padding: 1.9rem 0.7rem;
+  }
+}
+
+///////////////////////////////
 //****** hero section *******//
 ///////////////////////////////
 
 .hero {
   background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
-  height: 60vh;
+  height: 100vh;
 
   &__title-section {
     width: 100%;
@@ -55,7 +91,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 200px;
+    width: 12.5%;
     margin: 0 5rem;
 
     img {
