--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,34 @@ body {
   font-family: "CerebriSans", sans-serif;
   line-height: 1.74; }
 
-.header {
-  display: flex;
-  justify-content: space-between;
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto; }
+
+.grid {
+  display: grid;
+  gap: 9.6rem; }
+
+.grid--1-cols {
+  grid-template-columns: repeat(1, 1fr); }
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr); }
+
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr); }
+
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr); }
+
+.grid--nav-cols {
+  grid-template-columns: 40% 1fr;
+  gap: 0rem;
   align-items: center;
+  justify-content: center; }
+
+.header {
   height: 63px;
   padding: 0 4rem;
   box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1); }
@@ -25,9 +49,10 @@ body {
 .main-nav__list {
   list-style: none;
   display: flex;
-  gap: 3.2rem;
+  justify-content: flex-end;
+  gap: 2rem;
   height: auto;
-  padding: 0 3rem; }
+  padding: 0 1.5rem; }
 
 .main-nav__link:link, .main-nav__link:visited {
   text-decoration: none;
@@ -66,17 +91,20 @@ body {
       line-height: 5.4rem; }
 
 .feature {
-  display: flex;
-  align-items: center;
+  width: 90%;
+  height: 500px;
+  gap: 0;
+  margin: 0 auto;
   justify-content: center;
-  height: 500px; }
+  align-items: center; }
   .feature__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 12.5%;
-    margin: 0 5rem; }
+    width: 20rem;
+    height: 23rem;
+    margin: 0 auto; }
     .feature__container img {
       margin-bottom: 2rem; }
     .feature__container h6 {
@@ -91,11 +119,7 @@ body {
       text-align: center; }
 
 .product {
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  height: 500px;
-  padding: 6rem 0;
+  height: 800px;
   background-color: #f8f8f8; }
   .product__heading--container {
     margin: 0 auto;
@@ -112,16 +136,20 @@ body {
     .product__heading--container h3 {
       font-size: 2.8rem; }
   .product__container--nested {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 6rem;
-    margin: 0 8rem 0 8rem; }
+    gap: 0 2rem;
+    height: 40rem;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto; }
     .product__container--nested img {
       border-radius: 0.5rem;
-      width: 100%;
-      grid-row: 1/2;
-      margin-right: 2rem; }
+      width: 90%;
+      margin: 0 auto;
+      grid-row: 1/2; }
     .product__container--nested p {
+      width: 90%;
+      margin: 0 auto;
       font-size: 1.5rem;
       color: #7e7e7e;
       text-align: center; }
