--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -2,10 +2,14 @@
 //****** navigation *******//
 ///////////////////////////////
 
-.header {
-  display: flex;
-  justify-content: space-between;
+.grid--nav-cols {
+  grid-template-columns: 40% 1fr;
+  gap: 0rem;
   align-items: center;
+  justify-content: center;
+}
+
+.header {
   height: 63px;
   padding: 0 4rem;
   box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
@@ -19,9 +23,10 @@
   &__list {
     list-style: none;
     display: flex;
-    gap: 3.2rem;
+    justify-content: flex-end;
+    gap: 2rem;
     height: auto;
-    padding: 0 3rem;
+    padding: 0 1.5rem;
   }
 
   &__link:link,
@@ -81,18 +86,21 @@
 ///////////////////////////////
 
 .feature {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 90%;
   height: 500px;
+  gap: 0;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 
   &__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 12.5%;
-    margin: 0 5rem;
+    width: 20rem;
+    height: 23rem;
+    margin: 0 auto;
 
     img {
       margin-bottom: 2rem;
@@ -117,12 +125,9 @@
 ///////////////////////////////
 //****** Product section *******//
 ///////////////////////////////
+
 .product {
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  height: 500px;
-  padding: 6rem 0;
+  height: 800px;
   background-color: #f8f8f8;
 
   &__heading--container {
@@ -146,22 +151,31 @@
   }
 
   &__container--nested {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 6rem;
-    margin: 0 8rem 0 8rem;
+    gap: 0 2rem;
+    height: 40rem;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 
     img {
       border-radius: 0.5rem;
-      width: 100%;
+      width: 90%;
+      margin: 0 auto;
       grid-row: 1/2;
-      margin-right: 2rem;
+      // margin-right: 2rem;
     }
 
     p {
+      width: 90%;
+      margin: 0 auto;
       font-size: 1.5rem;
       color: #7e7e7e;
       text-align: center;
     }
   }
 }
+
+///////////////////////////////
+//****** test section *******//
+///////////////////////////////
