--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,8 @@ body {
       margin-bottom: 2rem;
       color: #ababab; }
     .product__heading--container h3 {
-      font-size: 2.8rem; }
+      font-size: 4rem;
+      line-height: 1.4; }
   .product__container--nested {
     gap: 0 2rem;
     height: 40rem;
@@ -153,3 +154,62 @@ body {
       font-size: 1.5rem;
       color: #7e7e7e;
       text-align: center; }
+
+.partner {
+  height: 200px; }
+  .partner__container {
+    width: 100%;
+    height: 100px; }
+  .partner__logo {
+    width: 100%;
+    height: 120px; }
+  .partner__logo--container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10rem;
+    height: 100%;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center; }
+  .partner .bg-img {
+    width: 100%;
+    height: 100%;
+    background-color: #454545;
+    background-image: url(../../images/pattern/mitech-call-to-action-image-global.png);
+    background-repeat: no-repeat;
+    background-position: top 35% right -68px; }
+    .partner .bg-img__text {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2.4rem;
+      color: #fff; }
+
+.contact__bg-img {
+  display: flex;
+  padding-left: 12rem;
+  align-items: center;
+  height: 300px;
+  background-color: #eff2f6;
+  background-image: url(../images/bg/home-infotechno-contact-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.contact__title {
+  display: flex;
+  align-items: center;
+  text-align: left;
+  font-weight: 600;
+  line-height: 1.4;
+  font-size: 3.4rem;
+  width: 50%;
+  height: 80%; }
+
+.contact .line {
+  width: 8px;
+  height: 13rem;
+  background-color: #d2a98e;
+  margin-right: 5rem; }
