--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -146,7 +146,8 @@
     }
 
     h3 {
-      font-size: 2.8rem;
+      font-size: 4rem;
+      line-height: 1.4;
     }
   }
 
@@ -177,5 +178,84 @@
 }
 
 ///////////////////////////////
-//****** test section *******//
+//****** partner section *******//
 ///////////////////////////////
+
+.partner {
+  height: 200px;
+
+  &__container {
+    width: 100%;
+    height: 100px;
+  }
+
+  &__logo {
+    width: 100%;
+    height: 120px;
+  }
+
+  &__logo--container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10rem;
+    height: 100%;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .bg-img {
+    width: 100%;
+    height: 100%;
+    background-color: #454545;
+    background-image: url(../../images/pattern/mitech-call-to-action-image-global.png);
+    background-repeat: no-repeat;
+    background-position: top 35% right -68px;
+
+    &__text {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2.4rem;
+      color: #fff;
+    }
+  }
+}
+
+///////////////////////////////
+//****** contact section *******//
+///////////////////////////////
+
+.contact {
+  &__bg-img {
+    display: flex;
+    padding-left: 12rem;
+    align-items: center;
+    height: 300px;
+    background-color: #eff2f6;
+    background-image: url(../images/bg/home-infotechno-contact-bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  &__title {
+    display: flex;
+    align-items: center;
+    text-align: left;
+    font-weight: 600;
+    line-height: 1.4;
+    font-size: 3.4rem;
+    width: 50%;
+    height: 80%;
+  }
+
+  .line {
+    width: 8px;
+    height: 13rem;
+    background-color: #d2a98e;
+    margin-right: 5rem;
+  }
+}
