--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@ body {
   margin: 0 auto; }
 
 .grid {
-  display: grid;
-  gap: 9.6rem; }
+  display: grid; }
 
 .grid--1-cols {
   grid-template-columns: repeat(1, 1fr); }
@@ -33,80 +32,58 @@ body {
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr); }
 
-.grid--nav-cols {
-  grid-template-columns: 40% 1fr;
-  gap: 0rem;
-  align-items: center;
-  justify-content: center; }
-
-.header {
-  height: 63px;
-  padding: 0 4rem;
-  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1); }
-  .header__logo {
-    width: 220px; }
-
-.main-nav__list {
-  list-style: none;
-  display: flex;
-  justify-content: flex-end;
-  gap: 2rem;
-  height: auto;
-  padding: 0 1.5rem; }
-
-.main-nav__link:link, .main-nav__link:visited {
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 1.8rem;
-  color: #000;
-  padding: 1.9rem 0.7rem; }
-
-.hero {
-  background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
-  height: 100vh; }
-  .hero__title-section {
-    width: 100%;
-    text-align: center;
-    margin-top: 20rem; }
-    .hero__title-section h4 {
-      font-size: 2rem;
-      color: #ababab;
-      text-transform: uppercase;
-      letter-spacing: 0.2rem;
-      margin-bottom: 2rem; }
-    .hero__title-section h2 {
-      font-size: 4.8rem;
-      margin-bottom: 3rem; }
-    .hero__title-section .btn {
-      font-size: 1.8rem;
-      font-weight: 600;
-      border-radius: 0.5rem;
-      letter-spacing: 0em;
-      padding: 0 3rem;
-      background-image: linear-gradient(to right bottom, #ff70a5, #ffc76e);
-      border: none;
-      color: #fff;
-      text-align: center;
-      height: 5.4rem;
-      line-height: 5.4rem; }
-
 .feature {
-  width: 90%;
-  height: 500px;
-  gap: 0;
-  margin: 0 auto;
-  justify-content: center;
-  align-items: center; }
+  width: 100%;
+  height: 100%;
+  padding: 6rem 0;
+  margin: 0 auto; }
+  @media only screen and (max-width: 750px) {
+    .feature {
+      row-gap: 4rem;
+      grid-template-columns: none;
+      grid-template-rows: repeat(4, 1fr); } }
+  @media only screen and (min-width: 750px) and (max-width: 1000px) {
+    .feature {
+      row-gap: 3rem;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr); } }
+  @media only screen and (min-width: 1000px) and (max-width: 2560px) {
+    .feature {
+      width: 90%;
+      column-gap: 4rem; } }
   .feature__container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 20rem;
-    height: 23rem;
-    margin: 0 auto; }
+    border-radius: 5px;
+    margin: 0 auto;
+    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0);
+    transform: translateY(0);
+    transition: transform 0.7s ease-in, box-shadow 0.7s ease-in; }
+    @media only screen and (max-width: 750px) {
+      .feature__container {
+        justify-content: center;
+        align-items: center;
+        width: 80%; } }
+    @media only screen and (min-width: 750px) and (max-width: 1000px) {
+      .feature__container {
+        align-items: center;
+        width: 80%; } }
+    .feature__container:hover {
+      padding: 0rem;
+      box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.1);
+      transform: translateY(-8px);
+      transition: all 0.7s ease-in; }
     .feature__container img {
+      width: 12%;
+      margin: 0 auto;
+      padding-top: 2rem;
       margin-bottom: 2rem; }
+    .feature__container__text {
+      width: 100%;
+      text-align: center; }
+      @media only screen and (max-width: 1000px) {
+        .feature__container__text {
+          width: 80%; } }
     .feature__container h6 {
       font-size: 1.8rem;
       font-weight: 600;
@@ -116,100 +93,63 @@ body {
     .feature__container p {
       font-size: 1.5rem;
       color: #696969;
-      text-align: center; }
+      text-align: center;
+      padding: 0 2.5rem 2rem 2.5rem;
+      line-height: 2; }
+      @media only screen and (min-width: 1000px) and (max-width: 2560px) {
+        .feature__container p {
+          padding: 2rem; } }
 
-.product {
-  height: 800px;
-  background-color: #f8f8f8; }
-  .product__heading--container {
-    margin: 0 auto;
-    width: 60%;
-    text-align: center;
-    margin-bottom: 5rem; }
-    .product__heading--container h6 {
-      font-size: 2rem;
-      letter-spacing: 0.3rem;
-      line-height: 1.45;
-      text-transform: uppercase;
-      margin-bottom: 2rem;
-      color: #ababab; }
-    .product__heading--container h3 {
-      font-size: 4rem;
-      line-height: 1.4; }
-  .product__container--nested {
-    gap: 0 2rem;
-    height: 40rem;
-    width: 80%;
-    justify-content: center;
-    align-items: center;
+.footer {
+  padding: 2rem; }
+  .footer__container {
+    width: 100%;
+    height: 1000px;
     margin: 0 auto; }
-    .product__container--nested img {
-      border-radius: 0.5rem;
-      width: 90%;
-      margin: 0 auto;
-      grid-row: 1/2; }
-    .product__container--nested p {
-      width: 90%;
-      margin: 0 auto;
-      font-size: 1.5rem;
-      color: #7e7e7e;
-      text-align: center; }
-
-.partner {
-  height: 200px; }
-  .partner__container {
-    width: 100%;
-    height: 100px; }
-  .partner__logo {
-    width: 100%;
-    height: 120px; }
-  .partner__logo--container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10rem;
-    height: 100%;
-    width: 80%;
-    margin: 0 auto;
-    text-align: center; }
-  .partner .bg-img {
-    width: 100%;
-    height: 100%;
-    background-color: #454545;
-    background-image: url(../../images/pattern/mitech-call-to-action-image-global.png);
-    background-repeat: no-repeat;
-    background-position: top 35% right -68px; }
-    .partner .bg-img__text {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2.4rem;
-      color: #fff; }
-
-.contact__bg-img {
-  display: flex;
-  padding-left: 12rem;
-  align-items: center;
-  height: 300px;
-  background-color: #eff2f6;
-  background-image: url(../images/bg/home-infotechno-contact-bg.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; }
-
-.contact__title {
-  display: flex;
-  align-items: center;
-  text-align: left;
-  font-weight: 600;
-  line-height: 1.4;
-  font-size: 3.4rem;
-  width: 50%;
-  height: 80%; }
-
-.contact .line {
-  width: 8px;
-  height: 13rem;
-  background-color: #d2a98e;
-  margin-right: 5rem; }
+  .footer .title {
+    margin-bottom: 2rem;
+    font-family: "CerebriSans";
+    font-weight: 700;
+    font-size: 1.8rem;
+    color: #be210b;
+    line-height: 1.3; }
+  .footer__container--logo {
+    margin-bottom: 3rem; }
+    .footer__container--logo img {
+      width: 230px;
+      height: 40px; }
+  .footer__list {
+    list-style: none; }
+  .footer__list--items {
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    color: #696969;
+    font-weight: 400; }
+  .footer .text-black {
+    color: #333333; }
+  .footer a {
+    text-decoration: none;
+    color: #696969; }
+  .footer__link {
+    display: grid;
+    grid-template-rows: 15% 100%;
+    grid-template-columns: repeat(3, 1fr); }
+    .footer__link h6 {
+      font-size: 1.8rem;
+      color: #333333;
+      margin-bottom: 2rem; }
+    .footer__link .col-1 {
+      grid-column: 1/2;
+      grid-row: 2/3; }
+    .footer__link .col-2 {
+      grid-column: 2/3;
+      grid-row: 2/3; }
+    .footer__link .col-3 {
+      grid-column: 3/4;
+      grid-row: 2/3; }
+  .footer .copyright {
+    font-size: 1.5rem;
+    color: #696969;
+    margin-top: 2rem; }
+    .footer .copyright__link {
+      color: #ff0000; }
