--- a/sass/helpers/_mixins.scss
+++ b/sass/helpers/_mixins.scss
@@ -1,1 +1,35 @@
+@mixin custom-max($breakpoint) {
+  @media (max-width: #{$breakpoint}) {
+    @content;
+  }
+}
 
+@mixin custom-min($breakpoint) {
+  @media (min-width: #{$breakpoint}) {
+    @content;
+  }
+}
+
+@mixin media-breakpoint-up($breakpoint-name) {
+  @if $breakpoint-name==xs {
+    @media (max-width: #{$xs}) {
+      @content;
+    }
+  } @else if $breakpoint-name==sm {
+    @media (max-width: #{$sm}) {
+      @content;
+    }
+  } @else if $breakpoint-name==md {
+    @media (max-width: #{$md}) {
+      @content;
+    }
+  } @else if $breakpoint-name==lg {
+    @media (max-width: #{$lg}) {
+      @content;
+    }
+  } @else if $breakpoint-name==xl {
+    @media (max-width: #{$xl}) {
+      @content;
+    }
+  }
+}
