--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -2,108 +2,154 @@
 //****** navigation *******//
 ///////////////////////////////
 
-.grid--nav-cols {
-  grid-template-columns: 40% 1fr;
-  gap: 0rem;
-  align-items: center;
-  justify-content: center;
-}
+// .grid--nav-cols {
+//   grid-template-columns: 40% 1fr;
+//   gap: 0rem;
+//   align-items: center;
+//   justify-content: center;
+// }
 
-.header {
-  height: 63px;
-  padding: 0 4rem;
-  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+// .header {
+//   height: 63px;
+//   padding: 0 4rem;
+//   box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
 
-  &__logo {
-    width: 220px;
-  }
-}
+//   &__logo {
+//     width: 220px;
+//   }
+// }
 
-.main-nav {
-  &__list {
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
-    gap: 2rem;
-    height: auto;
-    padding: 0 1.5rem;
-  }
+// .main-nav {
+//   &__list {
+//     list-style: none;
+//     display: flex;
+//     justify-content: flex-end;
+//     gap: 2rem;
+//     height: auto;
+//     padding: 0 1.5rem;
+//   }
 
-  &__link:link,
-  &__link:visited {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 1.8rem;
-    color: #000;
-    padding: 1.9rem 0.7rem;
-  }
-}
+//   &__link:link,
+//   &__link:visited {
+//     text-decoration: none;
+//     font-weight: 500;
+//     font-size: 1.8rem;
+//     color: #000;
+//     padding: 1.9rem 0.7rem;
+//   }
+// }
 
 ///////////////////////////////
 //****** hero section *******//
 ///////////////////////////////
 
-.hero {
-  background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
-  height: 100vh;
+// .hero {
+//   background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
+//   height: 100vh;
 
-  &__title-section {
-    width: 100%;
-    text-align: center;
-    margin-top: 20rem;
+//   &__title-section {
+//     width: 100%;
+//     text-align: center;
+//     margin-top: 20rem;
 
-    h4 {
-      font-size: 2rem;
-      color: $color-grey;
-      text-transform: uppercase;
-      letter-spacing: 0.2rem;
-      margin-bottom: 2rem;
-    }
+//     h4 {
+//       font-size: 2rem;
+//       color: $color-grey;
+//       text-transform: uppercase;
+//       letter-spacing: 0.2rem;
+//       margin-bottom: 2rem;
+//     }
 
-    h2 {
-      font-size: 4.8rem;
-      margin-bottom: 3rem;
-    }
+//     h2 {
+//       font-size: 4.8rem;
+//       margin-bottom: 3rem;
+//     }
 
-    .btn {
-      font-size: 1.8rem;
-      font-weight: 600;
-      border-radius: 0.5rem;
-      letter-spacing: 0em;
-      padding: 0 3rem;
-      background-image: linear-gradient(to right bottom, #ff70a5, #ffc76e);
-      border: none;
-      color: #fff;
-      text-align: center;
-      height: 5.4rem;
-      line-height: 5.4rem;
-    }
-  }
-}
+//     .btn {
+//       font-size: 1.8rem;
+//       font-weight: 600;
+//       border-radius: 0.5rem;
+//       letter-spacing: 0em;
+//       padding: 0 3rem;
+//       background-image: linear-gradient(to right bottom, #ff70a5, #ffc76e);
+//       border: none;
+//       color: #fff;
+//       text-align: center;
+//       height: 5.4rem;
+//       line-height: 5.4rem;
+//     }
+//   }
+// }
 
 ///////////////////////////////
 //****** feature section *******//
 ///////////////////////////////
 
 .feature {
-  width: 90%;
-  height: 500px;
-  gap: 0;
+  width: 100%;
+  height: 100%;
+  padding: 6rem 0;
   margin: 0 auto;
-  justify-content: center;
-  align-items: center;
+
+  @media only screen and (max-width: 750px) {
+    row-gap: 4rem;
+    grid-template-columns: none;
+    grid-template-rows: repeat(4, 1fr);
+  }
+
+  @media only screen and (min-width: 750px) and (max-width: 1000px) {
+    row-gap: 3rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  @media only screen and (min-width: 1000px) and (max-width: 2560px) {
+    // margin: 0 2rem;
+    width: 90%;
+    column-gap: 4rem;
+  }
 
   &__container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 20rem;
-    height: 23rem;
+    border-radius: 5px;
     margin: 0 auto;
+    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0);
+    transform: translateY(0);
+    transition: transform 0.7s ease-in, box-shadow 0.7s ease-in;
+
+    @media only screen and (max-width: 750px) {
+      justify-content: center;
+      align-items: center;
+      width: 80%;
+    }
+
+    @media only screen and (min-width: 750px) and (max-width: 1000px) {
+      align-items: center;
+      width: 80%;
+    }
+
+    &:hover {
+      padding: 0rem;
+      box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.1);
+      transform: translateY(-8px);
+      transition: all 0.7s ease-in;
+    }
 
     img {
+      width: 12%;
+      margin: 0 auto;
+      padding-top: 2rem;
       margin-bottom: 2rem;
+    }
+
+    &__text {
+      width: 100%;
+      text-align: center;
+
+      @media only screen and (max-width: 1000px) {
+        width: 80%;
+      }
     }
 
     h6 {
@@ -118,6 +164,12 @@
       font-size: 1.5rem;
       color: $color-grey-2;
       text-align: center;
+      padding: 0 2.5rem 2rem 2.5rem;
+      line-height: 2;
+
+      @media only screen and (min-width: 1000px) and (max-width: 2560px) {
+        padding: 2rem;
+      }
     }
   }
 }
@@ -126,136 +178,216 @@
 //****** Product section *******//
 ///////////////////////////////
 
-.product {
-  height: 800px;
-  background-color: #f8f8f8;
+// .product {
+//   height: 800px;
+//   background-color: #f8f8f8;
 
-  &__heading--container {
-    margin: 0 auto;
-    width: 60%;
-    text-align: center;
-    margin-bottom: 5rem;
+//   &__heading--container {
+//     margin: 0 auto;
+//     width: 60%;
+//     text-align: center;
+//     margin-bottom: 5rem;
 
-    h6 {
-      font-size: 2rem;
-      letter-spacing: 0.3rem;
-      line-height: 1.45;
-      text-transform: uppercase;
-      margin-bottom: 2rem;
-      color: $color-grey;
-    }
+//     h6 {
+//       font-size: 2rem;
+//       letter-spacing: 0.3rem;
+//       line-height: 1.45;
+//       text-transform: uppercase;
+//       margin-bottom: 2rem;
+//       color: $color-grey;
+//     }
 
-    h3 {
-      font-size: 4rem;
-      line-height: 1.4;
-    }
-  }
+//     h3 {
+//       font-size: 4rem;
+//       line-height: 1.4;
+//     }
+//   }
 
-  &__container--nested {
-    gap: 0 2rem;
-    height: 40rem;
-    width: 80%;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
+//   &__container--nested {
+//     gap: 0 2rem;
+//     height: 40rem;
+//     width: 80%;
+//     justify-content: center;
+//     align-items: center;
+//     margin: 0 auto;
 
-    img {
-      border-radius: 0.5rem;
-      width: 90%;
-      margin: 0 auto;
-      grid-row: 1/2;
-      // margin-right: 2rem;
-    }
+//     img {
+//       border-radius: 0.5rem;
+//       width: 90%;
+//       margin: 0 auto;
+//       grid-row: 1/2;
+//       // margin-right: 2rem;
+//     }
 
-    p {
-      width: 90%;
-      margin: 0 auto;
-      font-size: 1.5rem;
-      color: #7e7e7e;
-      text-align: center;
-    }
-  }
-}
+//     p {
+//       width: 90%;
+//       margin: 0 auto;
+//       font-size: 1.5rem;
+//       color: #7e7e7e;
+//       text-align: center;
+//     }
+//   }
+// }
 
 ///////////////////////////////
 //****** partner section *******//
 ///////////////////////////////
 
-.partner {
-  height: 200px;
+// .partner {
+//   height: 200px;
 
-  &__container {
-    width: 100%;
-    height: 100px;
-  }
+//   &__container {
+//     width: 100%;
+//     height: 100px;
+//   }
 
-  &__logo {
-    width: 100%;
-    height: 120px;
-  }
+//   &__logo {
+//     width: 100%;
+//     height: 120px;
+//   }
 
-  &__logo--container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10rem;
-    height: 100%;
-    width: 80%;
-    margin: 0 auto;
-    text-align: center;
-  }
+//   &__logo--container {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     gap: 10rem;
+//     height: 100%;
+//     width: 80%;
+//     margin: 0 auto;
+//     text-align: center;
+//   }
 
-  .bg-img {
-    width: 100%;
-    height: 100%;
-    background-color: #454545;
-    background-image: url(../../images/pattern/mitech-call-to-action-image-global.png);
-    background-repeat: no-repeat;
-    background-position: top 35% right -68px;
+//   .bg-img {
+//     width: 100%;
+//     height: 100%;
+//     background-color: #454545;
+//     background-image: url(../../images/pattern/mitech-call-to-action-image-global.png);
+//     background-repeat: no-repeat;
+//     background-position: top 35% right -68px;
 
-    &__text {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2.4rem;
-      color: #fff;
-    }
-  }
-}
+//     &__text {
+//       width: 100%;
+//       height: 100%;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       font-size: 2.4rem;
+//       color: #fff;
+//     }
+//   }
+// }
 
 ///////////////////////////////
 //****** contact section *******//
 ///////////////////////////////
 
-.contact {
-  &__bg-img {
-    display: flex;
-    padding-left: 12rem;
-    align-items: center;
-    height: 300px;
-    background-color: #eff2f6;
-    background-image: url(../images/bg/home-infotechno-contact-bg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+// .contact {
+//   &__bg-img {
+//     display: flex;
+//     padding-left: 12rem;
+//     align-items: center;
+//     height: 300px;
+//     background-color: #eff2f6;
+//     background-image: url(../images/bg/home-infotechno-contact-bg.jpg);
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//   }
+
+//   &__title {
+//     display: flex;
+//     align-items: center;
+//     text-align: left;
+//     font-weight: 600;
+//     line-height: 1.4;
+//     font-size: 3.4rem;
+//     width: 50%;
+//     height: 80%;
+//   }
+// }
+
+///////////////////////////////
+//****** footer section *******//
+///////////////////////////////
+
+.footer {
+  padding: 2rem;
+
+  &__container {
+    width: 100%;
+    height: 1000px;
+    margin: 0 auto;
   }
 
-  &__title {
-    display: flex;
-    align-items: center;
-    text-align: left;
-    font-weight: 600;
-    line-height: 1.4;
-    font-size: 3.4rem;
-    width: 50%;
-    height: 80%;
+  .title {
+    margin-bottom: 2rem;
+    font-family: "CerebriSans";
+    font-weight: 700;
+    font-size: 1.8rem;
+    color: $color-brown;
+    line-height: 1.3;
   }
 
-  .line {
-    width: 8px;
-    height: 13rem;
-    background-color: #d2a98e;
-    margin-right: 5rem;
+  &__container--logo {
+    margin-bottom: 3rem;
+    img {
+      width: 230px;
+      height: 40px;
+    }
+  }
+
+  &__list {
+    list-style: none;
+  }
+
+  &__list--items {
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    color: $color-grey-2;
+    font-weight: 400;
+  }
+
+  .text-black {
+    color: $color-grey-dark;
+  }
+
+  a {
+    text-decoration: none;
+    color: $color-grey-2;
+  }
+
+  &__link {
+    display: grid;
+    grid-template-rows: 15% 100%;
+    grid-template-columns: repeat(3, 1fr);
+
+    h6 {
+      font-size: 1.8rem;
+      color: $color-grey-dark;
+      margin-bottom: 2rem;
+    }
+
+    .col-1 {
+      grid-column: 1/2;
+      grid-row: 2/3;
+    }
+
+    .col-2 {
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+
+    .col-3 {
+      grid-column: 3/4;
+      grid-row: 2/3;
+    }
+  }
+
+  .copyright {
+    font-size: 1.5rem;
+    color: $color-grey-2;
+    margin-top: 2rem;
+    &__link {
+      color: $color-red;
+    }
   }
 }
