--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -85,94 +85,94 @@
 //****** feature section *******//
 ///////////////////////////////
 
-.feature {
-  width: 100%;
-  height: 100%;
-  padding: 6rem 0;
-  margin: 0 auto;
+// .feature {
+//   width: 100%;
+//   height: 100%;
+//   padding: 6rem 0;
+//   margin: 0 auto;
 
-  @media only screen and (max-width: 750px) {
-    row-gap: 4rem;
-    grid-template-columns: none;
-    grid-template-rows: repeat(4, 1fr);
-  }
+//   @media only screen and (max-width: 750px) {
+//     row-gap: 4rem;
+//     grid-template-columns: none;
+//     grid-template-rows: repeat(4, 1fr);
+//   }
 
-  @media only screen and (min-width: 750px) and (max-width: 1000px) {
-    row-gap: 3rem;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-  }
+//   @media only screen and (min-width: 750px) and (max-width: 1000px) {
+//     row-gap: 3rem;
+//     grid-template-columns: repeat(2, 1fr);
+//     grid-template-rows: repeat(2, 1fr);
+//   }
 
-  @media only screen and (min-width: 1000px) and (max-width: 2560px) {
-    // margin: 0 2rem;
-    width: 90%;
-    column-gap: 4rem;
-  }
+//   @media only screen and (min-width: 1000px) and (max-width: 2560px) {
+//     // margin: 0 2rem;
+//     width: 90%;
+//     column-gap: 4rem;
+//   }
 
-  &__container {
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    margin: 0 auto;
-    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0);
-    transform: translateY(0);
-    transition: transform 0.7s ease-in, box-shadow 0.7s ease-in;
+//   &__container {
+//     display: flex;
+//     flex-direction: column;
+//     border-radius: 5px;
+//     margin: 0 auto;
+//     box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0);
+//     transform: translateY(0);
+//     transition: transform 0.7s ease-in, box-shadow 0.7s ease-in;
 
-    @media only screen and (max-width: 750px) {
-      justify-content: center;
-      align-items: center;
-      width: 80%;
-    }
+//     @media only screen and (max-width: 750px) {
+//       justify-content: center;
+//       align-items: center;
+//       width: 80%;
+//     }
 
-    @media only screen and (min-width: 750px) and (max-width: 1000px) {
-      align-items: center;
-      width: 80%;
-    }
+//     @media only screen and (min-width: 750px) and (max-width: 1000px) {
+//       align-items: center;
+//       width: 80%;
+//     }
 
-    &:hover {
-      padding: 0rem;
-      box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.1);
-      transform: translateY(-8px);
-      transition: all 0.7s ease-in;
-    }
+//     &:hover {
+//       padding: 0rem;
+//       box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.1);
+//       transform: translateY(-8px);
+//       transition: all 0.7s ease-in;
+//     }
 
-    img {
-      width: 12%;
-      margin: 0 auto;
-      padding-top: 2rem;
-      margin-bottom: 2rem;
-    }
+//     img {
+//       width: 12%;
+//       margin: 0 auto;
+//       padding-top: 2rem;
+//       margin-bottom: 2rem;
+//     }
 
-    &__text {
-      width: 100%;
-      text-align: center;
+//     &__text {
+//       width: 100%;
+//       text-align: center;
 
-      @media only screen and (max-width: 1000px) {
-        width: 80%;
-      }
-    }
+//       @media only screen and (max-width: 1000px) {
+//         width: 80%;
+//       }
+//     }
 
-    h6 {
-      font-size: 1.8rem;
-      font-weight: 600;
-      line-height: 1.25;
-      margin-bottom: 1.2rem;
-      text-align: center;
-    }
+//     h6 {
+//       font-size: 1.8rem;
+//       font-weight: 600;
+//       line-height: 1.25;
+//       margin-bottom: 1.2rem;
+//       text-align: center;
+//     }
 
-    p {
-      font-size: 1.5rem;
-      color: $color-grey-2;
-      text-align: center;
-      padding: 0 2.5rem 2rem 2.5rem;
-      line-height: 2;
+//     p {
+//       font-size: 1.5rem;
+//       color: $color-grey-2;
+//       text-align: center;
+//       padding: 0 2.5rem 2rem 2.5rem;
+//       line-height: 2;
 
-      @media only screen and (min-width: 1000px) and (max-width: 2560px) {
-        padding: 2rem;
-      }
-    }
-  }
-}
+//       @media only screen and (min-width: 1000px) and (max-width: 2560px) {
+//         padding: 2rem;
+//       }
+//     }
+//   }
+// }
 
 ///////////////////////////////
 //****** Product section *******//
