--- a/css/style.css
+++ b/css/style.css
@@ -32,80 +32,11 @@ body {
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr); }
 
-.feature {
-  width: 100%;
-  height: 100%;
-  padding: 6rem 0;
-  margin: 0 auto; }
-  @media only screen and (max-width: 750px) {
-    .feature {
-      row-gap: 4rem;
-      grid-template-columns: none;
-      grid-template-rows: repeat(4, 1fr); } }
-  @media only screen and (min-width: 750px) and (max-width: 1000px) {
-    .feature {
-      row-gap: 3rem;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr); } }
-  @media only screen and (min-width: 1000px) and (max-width: 2560px) {
-    .feature {
-      width: 90%;
-      column-gap: 4rem; } }
-  .feature__container {
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    margin: 0 auto;
-    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0);
-    transform: translateY(0);
-    transition: transform 0.7s ease-in, box-shadow 0.7s ease-in; }
-    @media only screen and (max-width: 750px) {
-      .feature__container {
-        justify-content: center;
-        align-items: center;
-        width: 80%; } }
-    @media only screen and (min-width: 750px) and (max-width: 1000px) {
-      .feature__container {
-        align-items: center;
-        width: 80%; } }
-    .feature__container:hover {
-      padding: 0rem;
-      box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.1);
-      transform: translateY(-8px);
-      transition: all 0.7s ease-in; }
-    .feature__container img {
-      width: 12%;
-      margin: 0 auto;
-      padding-top: 2rem;
-      margin-bottom: 2rem; }
-    .feature__container__text {
-      width: 100%;
-      text-align: center; }
-      @media only screen and (max-width: 1000px) {
-        .feature__container__text {
-          width: 80%; } }
-    .feature__container h6 {
-      font-size: 1.8rem;
-      font-weight: 600;
-      line-height: 1.25;
-      margin-bottom: 1.2rem;
-      text-align: center; }
-    .feature__container p {
-      font-size: 1.5rem;
-      color: #696969;
-      text-align: center;
-      padding: 0 2.5rem 2rem 2.5rem;
-      line-height: 2; }
-      @media only screen and (min-width: 1000px) and (max-width: 2560px) {
-        .feature__container p {
-          padding: 2rem; } }
-
 .footer {
-  padding: 2rem; }
+  padding: 4rem 0; }
   .footer__container {
     width: 100%;
-    height: 1000px;
-    margin: 0 auto; }
+    padding-left: 2rem; }
   .footer .title {
     margin-bottom: 2rem;
     font-family: "CerebriSans";
@@ -132,24 +63,33 @@ body {
     color: #696969; }
   .footer__link {
     display: grid;
-    grid-template-rows: 15% 100%;
+    width: 100%;
+    margin: 0 auto;
+    text-align: left;
+    grid-template-rows: 15% 1fr;
     grid-template-columns: repeat(3, 1fr); }
     .footer__link h6 {
+      padding: 0 2rem;
       font-size: 1.8rem;
       color: #333333;
       margin-bottom: 2rem; }
     .footer__link .col-1 {
+      padding: 0 2rem;
       grid-column: 1/2;
       grid-row: 2/3; }
     .footer__link .col-2 {
+      padding: 0 2rem;
       grid-column: 2/3;
       grid-row: 2/3; }
     .footer__link .col-3 {
+      padding: 0 2rem;
       grid-column: 3/4;
       grid-row: 2/3; }
   .footer .copyright {
+    width: 90%;
+    text-align: center;
     font-size: 1.5rem;
     color: #696969;
-    margin-top: 2rem; }
+    margin: 0 auto 2rem auto; }
     .footer .copyright__link {
       color: #ff0000; }
