--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -1,9 +1,12 @@
+$color-grey-light: #e0e0e0;
 $color-grey: #ababab;
 $color-grey-2: #696969;
 $color-brown: #be210b;
 $color-grey-dark: #333333;
 $color-black: #000;
 $color-red: #ff0000;
+$color-blue: #007bff;
+// #086AD8
 
 /////////////// breakpoints /////////////////
 
