--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,31 @@ body {
   grid-template-columns: repeat(4, 1fr); }
 
 .footer {
-  padding: 4rem 0; }
+  padding: 4rem 0;
+  max-width: 1200px;
+  margin: 0 auto; }
   .footer__container {
     width: 100%;
-    padding-left: 2rem; }
+    padding-left: 2rem;
+    padding-bottom: 1rem; }
+    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+      .footer__container {
+        display: flex; } }
+  .footer__flex-1 {
+    padding: 0 2rem; }
+    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+      .footer__flex-1 {
+        width: 40%; } }
+  @media only screen and (min-width: 770px) and (max-width: 1440px) {
+    .footer .product-container {
+      width: 20%; } }
+  .footer .support-container {
+    grid-column: 1/2;
+    grid-row: 3/4; }
+    @media only screen and (min-width: 380px) and (max-width: 770px) {
+      .footer .support-container {
+        grid-column: 3/4;
+        grid-row: 1/2; } }
   .footer .title {
     margin-bottom: 2rem;
     font-family: "CerebriSans";
@@ -51,6 +72,10 @@ body {
       height: 40px; }
   .footer__list {
     list-style: none; }
+    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+      .footer__list {
+        display: flex;
+        flex-direction: column; } }
   .footer__list--items {
     margin-bottom: 1rem;
     font-size: 1.5rem;
@@ -65,9 +90,21 @@ body {
     display: grid;
     width: 100%;
     margin: 0 auto;
+    margin-bottom: 3rem;
     text-align: left;
-    grid-template-rows: 15% 1fr;
-    grid-template-columns: repeat(3, 1fr); }
+    grid-template-rows: 12% 1fr 12% 12%;
+    grid-template-columns: 1fr 1fr; }
+    @media only screen and (min-width: 320px) and (max-width: 380px) {
+      .footer__link {
+        grid-template-rows: 15% 1fr 20%;
+        grid-template-columns: repeat(2, 1fr); } }
+    @media only screen and (min-width: 380px) and (max-width: 770px) {
+      .footer__link {
+        grid-template-rows: 15% 1fr;
+        grid-template-columns: repeat(3, 1fr); } }
+    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+      .footer__link {
+        display: contents; } }
     .footer__link h6 {
       padding: 0 2rem;
       font-size: 1.8rem;
@@ -83,13 +120,55 @@ body {
       grid-row: 2/3; }
     .footer__link .col-3 {
       padding: 0 2rem;
-      grid-column: 3/4;
-      grid-row: 2/3; }
+      grid-column: 1/2;
+      grid-row: 4/5; }
+      .footer__link .col-3 h6 {
+        grid-column: 1/2;
+        grid-row: 3/4; }
   .footer .copyright {
-    width: 90%;
+    width: 80%;
     text-align: center;
     font-size: 1.5rem;
     color: #696969;
     margin: 0 auto 2rem auto; }
+    @media only screen and (min-width: 320px) and (max-width: 770px) {
+      .footer .copyright {
+        padding: 1rem;
+        width: 100%;
+        text-align: center; } }
+    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+      .footer .copyright {
+        width: 60%;
+        text-align: left;
+        padding: 0 1rem;
+        margin: 8px; } }
     .footer .copyright__link {
       color: #ff0000; }
+  .footer__icons {
+    text-align: center; }
+    @media only screen and (min-width: 380px) and (max-width: 770px) {
+      .footer__icons {
+        width: 100%;
+        text-align: center; } }
+    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+      .footer__icons {
+        width: 40%;
+        text-align: right; } }
+    .footer__icons i {
+      font-size: 1.8rem;
+      padding: 1.5rem 1.8rem;
+      color: #696969;
+      border: 1px solid #e0e0e0;
+      border-radius: 50%;
+      transition: all 0.7s ease-in;
+      margin: 8px; }
+      .footer__icons i:hover {
+        color: white;
+        background-color: #007bff;
+        transition: all 0.7s ease-in; }
+  .footer__bottom-wrapper {
+    display: block;
+    padding: 0 2rem; }
+    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+      .footer__bottom-wrapper {
+        display: flex; } }
