--- a/css/style.css
+++ b/css/style.css
@@ -40,52 +40,68 @@ body {
     width: 100%;
     padding-left: 2rem;
     padding-bottom: 1rem; }
+    .footer__container-flex {
+      padding: 0 1.5rem; }
     @media only screen and (min-width: 770px) and (max-width: 4000px) {
       .footer__container {
-        display: flex; } }
-  .footer__flex-1 {
-    padding: 0 2rem; }
+        margin: 0 auto;
+        width: 95%;
+        display: flex;
+        justify-content: space-between; } }
     @media only screen and (min-width: 770px) and (max-width: 1440px) {
-      .footer__flex-1 {
-        width: 40%; } }
-  @media only screen and (min-width: 770px) and (max-width: 1440px) {
-    .footer .product-container {
-      width: 20%; } }
-  .footer .support-container {
-    grid-column: 1/2;
-    grid-row: 3/4; }
-    @media only screen and (min-width: 380px) and (max-width: 770px) {
-      .footer .support-container {
-        grid-column: 3/4;
-        grid-row: 1/2; } }
-  .footer .title {
+      .footer__container-1, .footer__container-2, .footer__container-3 {
+        width: 20%; } }
+    .footer__container-3 {
+      grid-column: 1/2;
+      grid-row: 3/4; }
+      @media only screen and (min-width: 380px) and (max-width: 770px) {
+        .footer__container-3 {
+          grid-column: 3/4;
+          grid-row: 1/2; } }
+    .footer__container--logo {
+      margin-bottom: 3rem; }
+      .footer__container--logo img {
+        width: 230px;
+        height: 40px; }
+  .footer__title {
     margin-bottom: 2rem;
     font-family: "CerebriSans";
     font-weight: 700;
     font-size: 1.8rem;
     color: #be210b;
     line-height: 1.3; }
-  .footer__container--logo {
-    margin-bottom: 3rem; }
-    .footer__container--logo img {
-      width: 230px;
-      height: 40px; }
   .footer__list {
     list-style: none; }
     @media only screen and (min-width: 770px) and (max-width: 1440px) {
       .footer__list {
         display: flex;
         flex-direction: column; } }
-  .footer__list--items {
-    margin-bottom: 1rem;
-    font-size: 1.5rem;
-    color: #696969;
-    font-weight: 400; }
-  .footer .text-black {
-    color: #333333; }
+    .footer__list--items {
+      margin-bottom: 1rem;
+      font-size: 1.5rem;
+      color: #696969;
+      font-weight: 400; }
   .footer a {
     text-decoration: none;
     color: #696969; }
+  .footer .hover-on-link {
+    position: relative; }
+    .footer .hover-on-link:hover {
+      color: #d2a98e;
+      transition: color 0.5s ease; }
+    .footer .hover-on-link::after {
+      transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
+      content: "";
+      position: absolute;
+      bottom: -10px;
+      right: 0;
+      width: 0;
+      height: 1px;
+      background-color: #d2a98e; }
+    .footer .hover-on-link:hover:after {
+      left: 0;
+      width: 100%;
+      right: auto; }
   .footer__link {
     display: grid;
     width: 100%;
@@ -148,6 +164,9 @@ body {
     display: inline-flex;
     text-align: center;
     column-gap: 1.5rem; }
+    @media only screen and (min-width: 320px) and (max-width: 770px) {
+      .footer__icons-wrapper {
+        column-gap: 0; } }
     .footer__icons-wrapper .icon {
       display: flex;
       flex-direction: column;
