--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -2,6 +2,7 @@ $color-grey-light: #e0e0e0;
 $color-grey: #ababab;
 $color-grey-2: #696969;
 $color-brown: #be210b;
+$color-brown-light: #d2a98e;
 $color-grey-dark: #333333;
 $color-black: #000;
 $color-red: #ff0000;
