--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -2,14 +2,17 @@ $color-grey-light: #e0e0e0;
 $color-grey: #ababab;
 $color-grey-2: #696969;
 $color-brown: #be210b;
+$color-brown-shade: #c95546;
 $color-brown-light: #d2a98e;
 $color-grey-dark: #333333;
 $color-black: #000;
 $color-red: #ff0000;
 $color-blue: #086ad8;
+$color-blue-dark: #002fa6;
 
 // #007bff
 // #086AD8
+// #002fa6
 
 /////////////// breakpoints /////////////////
 
