--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -1,4 +1,5 @@
 $color-grey-light: #e0e0e0;
+$color-grey-light-2: #7e7e7e;
 $color-grey: #ababab;
 $color-grey-2: #696969;
 $color-brown: #be210b;
@@ -10,9 +11,11 @@ $color-red: #ff0000;
 $color-blue: #086ad8;
 $color-blue-dark: #002fa6;
 
+// #333
 // #007bff
 // #086AD8
 // #002fa6
+// #1c0f69
 
 /////////////// breakpoints /////////////////
 
