--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -181,51 +181,129 @@
 
 // .product {
 //   height: 800px;
-//   background-color: #f8f8f8;
-
-//   &__heading--container {
-//     margin: 0 auto;
-//     width: 60%;
-//     text-align: center;
-//     margin-bottom: 5rem;
-
+//   padding: 4rem 0;
+//   &__heading {
 //     h6 {
 //       font-size: 2rem;
-//       letter-spacing: 0.3rem;
-//       line-height: 1.45;
-//       text-transform: uppercase;
-//       margin-bottom: 2rem;
 //       color: $color-grey;
+//       text-transform: uppercase;
+//       text-align: center;
+//       line-height: 1.4;
+//       letter-spacing: 0.3rem;
+//       margin-bottom: 2rem;
 //     }
 
 //     h3 {
-//       font-size: 4rem;
-//       line-height: 1.4;
+//       font-size: 2.5rem;
+//       line-height: 1.3;
+//       width: 90%;
+//       margin: 0 auto;
+//       text-align: center;
 //     }
 //   }
 
 //   &__container--nested {
-//     gap: 0 2rem;
-//     height: 40rem;
-//     width: 80%;
-//     justify-content: center;
-//     align-items: center;
-//     margin: 0 auto;
-
+//     display: flex;
+//     flex-direction: column;
 //     img {
+//       width: 100%;
+//     }
+//   }
+
+//   &__container--cards {
+//     display: flex;
+//     column-gap: 5rem;
+//     padding: 0 1.5rem;
+//     margin-top: 3rem;
+//     flex: 1;
+
+//     @media only screen and (min-width: 0px) and (max-width: 450px) {
+//       margin: 3rem auto 0 auto;
+//       max-width: 425px;
+//     }
+
+//     @media only screen and (min-width: 450px) and (max-width: 1440px) {
+//       margin: 3rem auto 0 auto;
+//       max-width: 1100px;
+//     }
+
+//     .bg-img-1,
+//     .bg-img-2,
+//     .bg-img-3 {
+//       width: 100%;
+//       height: 200px;
 //       border-radius: 0.5rem;
-//       width: 90%;
-//       margin: 0 auto;
-//       grid-row: 1/2;
-//       // margin-right: 2rem;
+//       background-size: cover;
+//       background-repeat: no-repeat;
+//       position: relative;
+
+//       @media only screen and (min-width: 375px) and (max-width: 450px) {
+//         width: 100%;
+//         margin: 0 auto;
+//       }
+
+//       h6 {
+//         width: 100%;
+//         position: absolute;
+//         top: 50%;
+//         left: 50%;
+//         transform: translate(-50%, -50%);
+//         bottom: 20%;
+//         text-align: center;
+//         font-size: 2.4rem;
+//         color: #fff;
+
+//         @media only screen and (min-width: 330px) and (max-width: 750px) {
+//           width: 80%;
+//         }
+//       }
 //     }
 
 //     p {
+//       padding-top: 3rem;
+//       font-size: 1.5rem;
+//       text-align: center;
+//       color: $color-grey-light-2;
+
+//       strong {
+//         color: $color-grey-dark;
+//       }
+//     }
+
+//     .bg-img-1 {
+//       background-image: linear-gradient(-180deg, transparent 39%, #1c0f69 150%),
+//         url(../../images/banner/bss_frame.png);
+//     }
+
+//     .bg-img-2 {
+//       background-image: linear-gradient(-180deg, transparent 39%, #1c0f69 150%),
+//         url(../../images/banner/cms_frame.png);
+//     }
+
+//     .bg-img-3 {
+//       background-image: linear-gradient(-180deg, transparent 39%, #1c0f69 150%),
+//         url(../../images/banner/csms_frame.png);
+//     }
+//   }
+
+//   &__card-1,
+//   &__card-2,
+//   &__card-3 {
+//     width: 100%;
+//     display: flex;
+//     flex: 50%;
+//     padding-top: 2rem;
+//     flex-direction: column;
+
+//     @media only screen and (min-width: 330px) and (max-width: 750px) {
 //       width: 90%;
 //       margin: 0 auto;
-//       font-size: 1.5rem;
-//       color: #7e7e7e;
-//       text-align: center;
+//     }
+//   }
+
+//   &__card-3 {
+//     @media only screen and (min-width: 750px) and (max-width: 1000px) {
+//       flex-grow: 1;
 //     }
 //   }
 // }
