--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "helpers/helpers";
 @import "components/components";
 @import "global/global";
-@import "sections/section";
+@import "sections/home";
+@import "sections/about";
